# nvimRepo

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  TODO  init.vim  install.sh  install_pyenv.sh  settings.json  uninstall.sh
.github/workflows/: build.yml
configs/: autocommands.lua  autocommands.vim  docker.lua  docker.vim  functions.lua  functions.vim  general_settings.lua  general_settings.vim  keybindings.lua  keybindings.vim  lsp.lua  plugins.lua  plugins.vim  status_line.lua  status_line.vim
install/: install.sh  install_pyenv.sh  manjaro_install.sh  pyproject.toml  ubuntu_install.sh
manual/togglecomment/plugin/: ToggleComment.vim
spell/: en.utf-8.add  en.utf-8.add.spl
